cbr-frontend/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbr-frontend
  labels:
    owner : Nikolai_Voloshin
spec:
  selector:
    matchLabels:
      app: cbr-frontend
  template:
    metadata:
      labels:
        app: cbr-frontend
    spec:
      containers:
      - name: cbr-frontend
        image: gcr.io/cbr-grabber/cbr-frontend-staging:latest
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=cbr-grabber:europe-west3:staging-instance=tcp:3306"
          - "-credential_file=/secrets/service_account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: sa-key-volume
          mountPath: /secrets/
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu:    "50m"
          limits:
            memory: "256Mi"
            cpu:    "100m"
      volumes:
      - name: sa-key-volume
        secret:
          secretName: sa-key
